Fix page jumping when messages are shown

--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -24,6 +24,7 @@ div.jigoshop_error, div.jigoshop_message {
 	border: 1px solid;
 	margin: 10px 0;
 	padding: 10px 10px 10px 32px;
+	display: block;
 	background-repeat: no-repeat;
 	background-position: 10px center
 }
